--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -9,6 +9,13 @@ body {
   padding : 20px 70px 50px;
 }
 
+.signin_tab{
+  position:absolute;
+
+  left:-500px; 
+  top:30px;
+}
+
 .signup_tab{
   text-align :center;
   border : 5px solid;
@@ -17,6 +24,86 @@ body {
   padding: 25px 50px 25px;
   margin-left : 420px
 }
-.last_tab {
+
+.row {
   display: inline;
 }
+
+.myButton {
+  background-color:#44c767;
+  -moz-border-radius:28px;
+  -webkit-border-radius:28px;
+  border-radius:28px;
+  border:1px solid #18ab29;
+  display:inline-block;
+  cursor:pointer;
+  color:#ffffff;
+  font-family:Arial;
+  font-size:17px;
+  padding:16px 31px;
+  text-decoration:none;
+  text-shadow:0px 1px 0px #2f6627;
+}
+.myButton:hover {
+  background-color:#5cbf2a;
+}
+.myButton:active {
+  position:relative;
+  top:1px;
+}
+
+
+#accounts {
+  text-align: center;
+  margin: 0;
+  background: url('/assets/coffee-background5.jpg');
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+}
+
+#accounts h2 {
+  font-size: 5rem;
+  margin-bottom: 7rem;
+  margin-top: 12rem;
+  color: #fff;
+  text-shadow: 0 3px 5px rgba(0,0,0,.4);
+}
+
+.accounts-block {
+  width: 55%;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .35);
+  background: #fff;
+  margin-bottom: 10rem;
+  padding-bottom: 3rem;
+}
+
+.accounts-block h3 {
+  font-size: 2.5rem;
+  margin-bottom: 2rem;
+  margin-bottom: 4rem;
+  margin-top: 0;
+  background: #f1f1f1;
+  padding: 1rem 0;
+  color: #4d4d4d;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .40);
+}
+
+#accounts h4 {
+  font-size: 5rem;
+  color: #efa00b;
+  margin-bottom: 3rem;
+  margin-top: 0;
+}
+
+#accounts ul {
+  list-style-type: none;
+  padding: 0;
+  font-size: 1.75rem;
+  line-height: 3.5rem;
+  margin-bottom: 4rem;
+}
+
+
