--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,23 @@
   </head>
 
   <body>
+     
+    <% if current_user.present? %>
+      <li><%= link_to "#{current_user.email} - Log Out", destroy_user_session_path, method: :delete %>
+    <% end %>
+
+  <% if flash[:notice] %>
+     <div class="alert alert-success">
+       <button type="button" class="close" data-dismiss="alert">&times;</button>
+       <%= flash[:notice] %>
+     </div>
+   <% elsif flash[:alert] %>
+     <div class="alert alert-warning">
+       <button type="button" class="close" data-dismiss="alert">&times;</button>
+       <%= flash[:alert] %>
+     </div>
+   <% end %>
+   
     <%= yield %>
   </body>
 </html>
