--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -3,3 +3,6 @@
  <p><%= link_to wiki.title, wiki %></p>
 <% end %> 	
 
+  <div class="col-md-4">
+     <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
+    </div>
