--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,2 +1,10 @@
 <h1><%= @wiki.title %></h1>
-<p><%= @wiki.body %></p>
+ <div class="row">
+   <div class="col-md-8">
+     <p class="lead"><%= @wiki.body %></p>
+   </div>  
+    </div> 
+ <% if current_user %> 
+	  <%= link_to "Edit Wiki", edit_wiki_url, class: 'btn btn-success' %>
+	  <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
+<% end %>
