--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -2,4 +2,6 @@
 <% @wikis.each do |wiki| %>
  <p><%= link_to wiki.title, wiki %></p>
 <% end %> 	
-
+<div class="col-md-4">
+     <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
+</div>
