seed data merged

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,4 @@
 <h2>Welcome to the wiki page</h2>
+
+<%=  <div class="col-md-4">
+     <%= link_to "New Topic", new_topic_path, class: 'btn btn-success' %>
