--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -6,3 +6,7 @@
   <div class="col-md-4">
      <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
     </div>
+
+  <div class="col-md-4">
+     <%= link_to "upgrade to premium", new_charge_url, class: 'btn btn-success' %>
+    </div>  
