User-story-9-markdown and collaborators

--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @wiki.title %></h1>
  <div class="row">
    <div class="col-md-8">
-     <p class="lead"><%= @wiki.body %></p>
+     <p class="lead"><%= @wiki.markdown_body %></p>
    </div>  
     </div> 
  <% if current_user %> 
