--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -11,6 +11,18 @@
 	 <%= f.label :body %>
 	 <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter wiki description" %>
 	 </div>
+   <% if current_user.admin? || current_user.premium? %>
+    <div class="form-group">
+      <%= f.label :private, class: 'checkbox' do %>
+        <%= f.check_box :private %> Private wiki
+      <% end %>
+    </div>
+
+    <%= f.label :collabrators %>
+    <%= f.text_field :collaborators, class: 'form-control' %>
+       
+
+  <% end %>
 
      <%= f.submit "Save", class: 'btn btn-success' %>
      <% end %>		
